<resources>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="submit_label">Submit</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="login_label">Login</string>
    <string name="continue_label">Continue</string>
    <string name="search_label">Search</string>
    <string name="ok_label">OK</string>
    <string name="loading_message">Loading…</string>
    <string name="session_label">Session Expired</string>
    <string name="session_expired_text">Your sessions has expired. Please login again.</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="brands">Brands</string>
    <string name="my_account">My Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="categories">Categories</string>
    <string name="sales">Sales</string>
    <string name="nav_products">Products</string>
    <string name="nav_country">Choose Country</string>
    <string name="nav_track_order">Order Status</string>
    <string name="nav_country_warning">You are about to change the country. This clears the cart and you will be logged out. Are you sure?</string>
    <string name="navigation_cart_empty">Your cart is empty</string>
    <string name="login_title">Log In</string>
    <string name="login_sectiontitle">Credentials</string>
    <string name="register_required_text">Please fill in the required(*) fields</string>
    <string name="fgt_pass">Forgot Password?</string>
    <string name="log_val">Login Validation</string>
    <string name="register_terms_required">(Required)</string>
    <string name="forgotpass_header">Password Recovery</string>
    <string name="forgotpass_title">Your e-mail</string>
    <string name="forgotten_password">Please type in your email.</string>
    <string name="forgotten_password_sub_text">We will send you a link to change the password.</string>
    <string name="forgotten_password_resulttitle">Password recovery</string>
    <string name="forgotten_password_successtext">Email sent</string>
    <string name="forgotten_password_examplemail">john.doe@example.com</string>
    <string name="logout_title">Logout Confirmation</string>
    <string name="logout_text_question">Are you sure you want to exit?</string>
    <string name="wishlist_addcart">Buy</string>
    <string name="wishlist_notiems">You have no items in the cart</string>
    <string name="categories_name">Categories</string>
    <string name="categories_title">Search Categories</string>
    <string name="categories_name_all">All for</string>
    <string name="categories_toplevel_title">All Categories</string>
    <string name="account_title">My Account</string>
    <string name="account_name">My Account</string>
    <string name="myaccount_userdata">User Data</string>
    <string name="personal_data_title">Account Data</string>
    <string name="personal_data_label">Your Personal Data</string>
    <string name="new_password_label">New Password</string>
    <string name="contact_personal">Anything wrong? Contact your personal support now.</string>
    <string name="option2_description">Change Password, manage email</string>
    <string name="option3_description">Change or manage your options</string>
    <string name="new_password_hint">New password</string>
    <string name="retype_new_password_hint">Confirm password</string>
    <string name="product_review">PRODUCT RATING</string>
    <string name="in_stock">In Stock. </string>
    <string name="out_of_stock">Out of Stock. </string>
    <string name="delivery_time">Delivered in</string>
    <string name="business_days">business days</string>
    <string name="your_cart">Your Cart</string>
    <string name="product_specifications">Specification</string>
    <string name="product_variant_placeholder">…</string>
    <string name="product_features_title">Product Features</string>
    <string name="product_description_title">Product Description</string>
    <string name="product_details_title">Product Details</string>
    <string name="share_checkout_this_product">Check out this product I found:</string>
    <string name="product_could_not_retrieved">The product information could not be retrieved!</string>
    <string name="share_subject">Jumia Sharing</string>
    <string name="product_variance_choose">Please choose</string>
    <string name="product_variance_choose_error">Please choose one of several</string>
    <string name="product_outof_stock">Item is out of stock</string>
    <string name="error_add_to_cart_failed">Adding to cart failed</string>
    <string name="wishlist_header">Wishlist</string>
    <string name="wishlist_remove_title">Remove Item</string>
    <string name="wishlist_remove_message">Would you like to remove the selected item from the Wishlist?</string>
    <string name="wishlist_btn_addcart">Add to cart</string>
    <string name="wishlist_login_title">You are not logged in</string>
    <string name="wishlist_login_text">In order to complete your purchase, you must be logged in. Do you wish to login now or continue locally?</string>
    <string name="wishlist_addalltocart">Add all items to shopping cart</string>
    <string name="search_no_items">We couldn\'t find your product!</string>
    <string name="searchsuggestions_empty">No suggestions for your search term!</string>
    <string name="searchsuggestions_pleaseenter">Please enter a term for suggestions!</string>
    <string name="action_label_mypayments">Add Payment Method</string>
    <string name="action_label_add_address">Add New Address</string>
    <string name="action_label_terms">Terms</string>
    <string name="action_label_basket">Basket</string>
    <string name="action_label_share">Share It</string>
    <string name="action_label_buyall">Buy All</string>
    <string name="action_label_wishlist">Wish List</string>
    <string name="action_label_logout">Logout</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_configurator">Options</string>
    <string name="action_label_search_hint">Search on Jumia</string>
    <string name="dynamic_errortext"> is not correct </string>
    <string name="error_ismandatory">Please fill in the </string>
    <string name="dialog_to_reviews">To reviews</string>
    <string name="submit_text">Your comment has been submited and is now subject to approval.</string>
    <string name="login_text">In order to comment, you have to login. Do you want to login?</string>
    <string name="login_useraccount">In order to change your account data, you have to login. Do you want to login?</string>
    <string name="added_to_shop_cart_dialog_text">Item was added to shopping cart</string>
    <string name="vat_string">VAT included </string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_shopping_cart">Add to Cart</string>
    <string name="call_to_order">Call to order</string>
    <string name="shoppingcart_title">My Cart</string>
    <string name="shoppingcart_dialog_title">Shopping Cart</string>
    <string name="checkout_button_text">Proceed to Checkout</string>
    <string name="shoppingcart_alert_header">Basket</string>
    <string name="shoppingcart_alert_message_no_items">Basket empty! Please add products to the cart.</string>
    <string name="error_add_to_shopping_cart">This product could not be added to the shopping cart. Please try again later.</string>
    <string name="error_add_to_shopping_cart_quantity">You cannot order more than the allowed quantity. Sorry.</string>
    <string name="shoppingcart_choose_quantity">Choose Quantity</string>
    <string name="shoppingcart_quantity">Quantity</string>
    <string name="shoppingcart_article">article</string>
    <string name="shoppingcart_articles">articles</string>
    <string name="checkout_continue">Continue Browsing</string>
    <string name="sub_total_title">Subtotal</string>
    <string name="shoppingcart_header_description">VAT included</string>
    <string name="shoppingcart_item_btn_delete">Delete</string>
    <string name="shoppingcart_instock">In Stock.</string>
    <string name="shoppingcart_notinstock">Not In Stock.</string>
    <string name="order_sent_soon">Your order will be sent out soon.</string>
    <string name="thank_you_title">Thank You</string>
    <string name="register_button">Create Account</string>
    <string name="register_title">Create Account</string>
    <string name="register_sectiontitle">Account Data</string>
    <string name="registration_text">Register</string>
    <string name="register_text_terms_a">I agree with the</string>
    <string name="register_text_terms_b">Terms and Conditions</string>
    <string name="register_dialog_birthday">Your Date of Birth</string>
    <string name="register_birthday">Birthday</string>
    <string name="validation_title">Input data error</string>
    <string name="validation_errortext">There were errors on the data submited, please check your input fields.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="product_sort">Sort by:</string>
    <string name="product_sort_button">Sort</string>
    <string name="products_sort_popularity">Popularity</string>
    <string name="products_sort_priceup">Price up</string>
    <string name="products_sort_pricedown">Price down</string>
    <string name="products_sort_name">Name</string>
    <string name="products_sort_brand">Brand</string>
    <string name="try_again">Retry</string>
    <string name="no_conn">No Connection Available</string>
    <string name="no_service">Service unavailable</string>
    <string name="close_app">Close App</string>
    <string name="loading_more">Loading more items…</string>
    <string name="no_connect_warning_title">Warning</string>
    <string name="no_internet_access_warning_title">No Internet Access!</string>
    <string name="no_connect_dialog_content">Please check your Internet-Connection and try again!</string>
    <string name="writereview_page_title">Write Review</string>
    <string name="writereview_your_rating">Your Rating</string>
    <string name="writereview_title_hint">Title</string>
    <string name="writereview_review_hint">Comment</string>
    <string name="comment">Commit</string>
    <string name="writereview_send">Send Review</string>
    <string name="write_comment">Write a Review</string>
    <string name="submit_title">Review sent</string>
    <string name="pd_qtd">Quantity</string>
    <string name="form_texttoshort"> text is too short</string>
    <string name="form_texttolong"> text is too long</string>
    <string name="form_passwordsnomatch">Passwords do not match</string>
    <string name="password_changed">Password changed with success</string>
    <string name="server_error_title">Problem occured</string>
    <string name="server_error">We have encountered a small problem fetching the data.</string>
    <string name="password_new_mincharacters">The new password has to have at least 6 characters</string>
    <string name="jumia_international_title">JUMIA INTERNATIONAL</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="rating_question">You have used this Product? Rate it now!</string>
    <string name="posted_by">posted by</string>
    <string name="go_shop_text">Shop Now</string>
    <string name="thank_you_order_title">Thank You!</string>
    <string name="order_success">Your order has been successfully registered\n with the number:</string>
    <string name="order_track_success">You can track your order visiting \nthe order status area in this app</string>
</resources>