<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:scaleType="center"
        android:src="@drawable/checkout_state04" />

    <org.holoeverywhere.widget.TextView
        style="@style/activity_sectionheader_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_order_title" />

    <View style="@style/line_grey_style" />

    <org.holoeverywhere.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_huge"
        android:text="@string/order_sent_soon"
        android:textColor="@android:color/black"
        android:textSize="14dp" />

    <org.holoeverywhere.widget.Button
        android:id="@+id/btn_checkout_continue"
        style="@style/button_orange_style"
        android:contentDescription="@string/checkout_continue_button_description"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_veryhuge"
        android:text="@string/checkout_continue" />

</LinearLayout>