<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/rounded_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.mobile.components.customfontviews.TextView
                style="@style/rounded_box_title_grey"
                android:text="@string/register_sectiontitle" />

            <View style="@style/divider_horizontal_orange" />

            <LinearLayout
                android:layout_width="@dimen/login_container_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/registerform_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/rounded_margin_mid"
                    android:layout_marginRight="@dimen/rounded_margin_mid"
                    android:layout_marginTop="@dimen/rounded_margin_mid"
                    android:orientation="vertical" >
                </LinearLayout>

                <!-- REMEMBER EMAIL -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_item_height"
                    android:layout_marginBottom="@dimen/login_margin_small"
                    android:layout_marginLeft="@dimen/rounded_margin_mid"
                    android:layout_marginRight="@dimen/rounded_margin_mid"
                    android:layout_marginTop="@dimen/login_margin_medium" >

                    <include layout="@layout/login_remember_checkbox" />
                </LinearLayout>

                <com.mobile.components.customfontviews.Button
                    android:id="@+id/register_button_submit"
                    style="@style/button_orange_bottom"
                    android:contentDescription="@string/register_submit_description"
                    android:fontFamily="roboto_bold"
                    android:text="@string/registration_text" />

                <com.mobile.components.customfontviews.TextView
                    android:id="@+id/loginText"
                    style="@style/text_normal"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/login_margin_small"
                    android:layout_marginTop="@dimen/login_margin_small"
                    android:gravity="center"
                    android:text="@string/login_label"
                    android:textColor="@drawable/selector_link_blue" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>